deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staterpack
  labels:
    app.kubernetes.io/name: golang-staterpack
