deploy/k8s/11-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: staterpack
  labels:
    app.kubernetes.io/name: golang-staterpack
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
